--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html
       script(src='/javascripts/jquery.min.js')
       script(src='/javascripts/bootstrap.min.js')
       script(src='/javascripts/slide.js')
-  body
+  body(style='background-color:#95BBD1;')
     .navbar.my-navbar-default.navbar-fixed-top(role='navigation')
       .container
         .navbar-header
