--- a/public/stylesheets/mystyle.css
+++ b/public/stylesheets/mystyle.css
@@ -455,8 +455,28 @@ ul,li {list-style-type:none; text-transform:capitalize;}
     margin-top:8px;
 }
 .window3{
+     border: 1px solid rgb(195, 195, 195);
+     width: 95%;
+     min-height:200px;
+     margin:20px auto 0 auto;
+     border-radius: 4px;
+     -webkit-box-shadow: 0px 2px 3px 0px rgba(50, 50, 50, 0.11);
+     -moz-box-shadow: 0px 2px 3px 0px rgba(50, 50, 50, 0.11);
+     box-shadow: 0px 2px 3px 0px rgba(50, 50, 50, 0.11);
+     text-align: left;
+     vertical-align: top;
+     animation: zoom 500ms;
+     -webkit-animation: zoom 500ms;
+     background-color: #e8e8e8;
+ }
+.shopimg{
+    width:100%;
+}
+
+
+.window4{
     border: 1px solid rgb(195, 195, 195);
-    width: 95%;
+    width: 50%;
     min-height:200px;
     margin:20px auto 0 auto;
     border-radius: 4px;
@@ -469,8 +489,11 @@ ul,li {list-style-type:none; text-transform:capitalize;}
     -webkit-animation: zoom 500ms;
     background-color: #e8e8e8;
 }
-.shopimg{
-    width:100%;
+
+@media screen and (max-width: 768px){
+    .window4{
+        width:100%
+    }
 }
 
 
