--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
     head
         title= title
         link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+        link(rel='stylesheet', href='/stylesheets/mystyle.css')
         script(src='/javascripts/jquery.min.js')
         script(src='/javascripts/bootstrap.min.js')
     body
