--- a/views/filmList.jade
+++ b/views/filmList.jade
@@ -22,17 +22,14 @@ block content
                             table.table
                                 tbody
                                     tr
-                                        td http://www.runoob.com
                                         td
-                                            button.btn.btn-sm(style='float:right') 复制链接
+                                            a(href='ed2k://|file|%E9%87%91%E5%88%9A%EF%BC%9A%E9%AA%B7%E9%AB%85%E5%B2%9B.720p.%E5%9B%BD%E8%8B%B1%E5%8F%8C%E8%AF%AD.BD%E4%B8%AD%E8%8B%B1%E5%8F%8C%E5%AD%97[66%E5%BD%B1%E8%A7%86www.66ys.tv].mkv|1798500188|C59CF10631F7898DF30FAD4D710B7326|h=JKV5P6SBEEHIIJPFEHY24QMOTE33FUB3|/' style='text-decoration: none;color:black;') http://www.runoob.com
                                     tr
-                                        td http://www.runoob.com
                                         td
-                                            button.btn.btn-sm(style='float:right') 复制链接
+                                            a(href='http://www.runoob.com' style='text-decoration: none;color:black;') http://www.runoob.com
                                     tr
-                                        td http://www.runoob.com
                                         td
-                                            button.btn.btn-sm(style='float:right') 复制链接
+                                            a(href='http://www.runoob.com' style='text-decoration: none;color:black;') http://www.runoob.com
             .col-md-12
                 .window4
                     div(style='line-height: 30px;vertical-align: top;padding: 2px 9px 0')
@@ -46,14 +43,8 @@ block content
                                 tbody
                                     tr
                                         td http://www.runoob.com
-                                        td
-                                            button.btn.btn-sm(style='float:right') 复制链接
                                     tr
                                         td http://www.runoob.com
-                                        td
-                                            button.btn.btn-sm(style='float:right') 复制链接
                                     tr
                                         td http://www.runoob.com
-                                        td
-                                            button.btn.btn-sm(style='float:right') 复制链接
 
