--- a/views/recommend.jade
+++ b/views/recommend.jade
@@ -21,7 +21,7 @@ block content
                     if val.id == "1"
                         div.panel-collapse.collapse.in(id="#{val.id}")
                             .panel-body
-                                | #{val.state}
+                                p !{val.state}
                                 <br/>
                                 <br/>
                                 .table-responsive
