--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
         h1.text-center
             img(src="../images/logo.jpg" height="56px")
         .row
-            form.form-horizontal(action="search.js" method="get" role="form")
+            form.form-horizontal(action="search" method="post" role="form")
                 .input-group.col-md-8.col-md-offset-2
                     input.form-control(type="text" autofocus="autofocus")
                     .input-group-btn
