--- a/views/recommend.jade
+++ b/views/recommend.jade
@@ -4,7 +4,7 @@ block content
     .page-header
         h1.text-center
             img(src="../images/logo.jpg" height="56px")
-        form.form-horizontal(action="search.js" method="get" role="form")
+        form.form-horizontal(action="search" method="post" role="form")
             .input-group.col-md-8.col-md-offset-2
                 input.form-control(type="text" autofocus="autofocus")
                 .input-group-btn
