--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,12 +1,12 @@
 ﻿doctype html
 html
     head
-		title= title
-		link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
-		link(rel='stylesheet', href='/stylesheets/mystyle.css')
-		script(src='/javascripts/jquery.min.js')
-		script(src='/javascripts/bootstrap.min.js')
-		meta(charset='utf-8')
+        title= title
+        link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+        link(rel='stylesheet', href='/stylesheets/mystyle.css')
+        script(src='/javascripts/jquery.min.js')
+        script(src='/javascripts/bootstrap.min.js')
+        meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
     body
         .navbar.my-navbar-default.navbar-fixed-top(role='navigation')
             .container
